[bug] Fix 'Searching...' indicator alignment

--- a/src/app/components/login-list/login-list.component.scss
+++ b/src/app/components/login-list/login-list.component.scss
@@ -10,11 +10,6 @@
   }
 }
 
-.results--container__disabled {
-  opacity: 15%;
-  pointer-events: none;
-}
-
 .spinner--container {
   padding-top: 150px;
 }
