--- a/src/app/components/results/results.component.scss
+++ b/src/app/components/results/results.component.scss
@@ -1,4 +1,4 @@
-.results-container {
+.table--container {
   padding: 20px;
 
   .pagination-container {
