--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 $color-magenta: #ff00c8;
+$color-blue: #004c91;
 
 .font--mono {
   font-family: monospace;
 }
 
 .highlight {
-  color: $color-magenta;
+  color: $color-blue;
 }
